--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тестовая страница</title>
-</head>
-<body>
-    <h1>Мой первый проект</h1>
-    <p>Это тестовая страница для практического занятия.</p>
-</body>
+<html lang="ru"> 
+    <head> 
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <title>Семестровая работа</title> 
+    </head> 
+    <body> 
+        <div id="header">Хэдер</div> 
+        <div id="menu"> 
+            <ul> 
+                <li><a href="index.html">Главная</a></li> 
+                <li><a href="pages/news.html">Новости</a></li> 
+                <li><a href="pages/practices.html">Практики</a></li>  
+                <li><a href="pages/goods.html">Товары</a></li> 
+                <li><a href="pages/contacts.html">Контакты</a></li> 
+            </ul> 
+        </div> 
+        <div id="content"> 
+            <p>Информация об авторе:</p> 
+            <img src="photo1.jpg" alt="Фото автора" width="200" height="250"> 
+            <p>Хамрокулов С. С.</p> 
+            <p>ЭФБО-12-24</p> 
+            <p>Обо мне: Я родился в не Москве, в 2006-м на краю города. </p> 
+            <div>Навык 1: зарабатываю деньги</div> ж
+            <div>Навык 2: жму 1кг от груди</div> 
+            <div>Навык 3: моргаю раз в час</div> 
+            <div>Навык 4: умею летать</div> 
+            <div> 
+                Мой опыт работы: 
+                <div> 
+                    Опыт 1 работы:<br> 
+                    Работал курьером Яндекс Go. 
+                </div>
+                <div> 
+                    Опыт 2 работы:<br> 
+                    Работал сборщиком заказов в МегаМаркете. 
+                </div> 
+                <div> 
+                    Опыт 3 работы:<br> 
+                    Работал велокурьером в ДоДо. 
+                </div> 
+            </div> 
+        </div> 
+        <div id="footer">Футер</div>     
+    </body>
 </html>
