--- a/pages/practices.html
+++ b/pages/practices.html
@@ -4,22 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Практики - Семестровая работа</title>
+        <link rel="stylesheet" href="../style/styles.css">
     </head>
     <body>
-        <div id="header">Хэдер</div>
-        <div id="menu">
-            <ul>
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="news.html">Новости</a></li>
-                <li><a href="practices.html">Практики</a></li>
-                <li><a href="goods.html">Товары</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
+        <div class="page-container">
+            <div class="header">Хэдер</div>
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="content">
+                <h1 class="page-title">Практические работы</h1>
+                <div class="practices-container">
+                    <div class="practice-card">
+                        <h3 class="practice-title">Практическая работа №1</h3>
+                        <p class="practice-desc">Введение в HTML разметку</p>
+                    </div>
+                    <div class="practice-card">
+                        <h3 class="practice-title">Практическая работа №2</h3>
+                        <p class="practice-desc">Основы CSS стилизации</p>
+                    </div>
+                    <div class="practice-card">
+                        <h3 class="practice-title">Практическая работа №3</h3>
+                        <p class="practice-desc">Адаптивная верстка</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">Футер</div>
         </div>
-        <div id="content">
-            <h2>Список практических работ</h2>
-            <p>Здесь будут размещены практические работы по курсу.</p>
-        </div>
-        <div id="footer">Футер</div>
     </body>
 </html>
