--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,14 +23,14 @@
                 <div class="contacts-container">
                     <div class="contact-card">
                         <h3 class="contact-title">Электронная почта</h3>
-                        <p class="contact-info">ваш-email@example.com</p>
+                        <p class="contact-info">samirhamroev@mail.ru</p>
                     </div>
                     <div class="contact-card">
                         <h3 class="contact-title">Адрес</h3>
-                        <p class="contact-info">г. Москва, ул. Примерная, д. 1</p>
+                        <p class="contact-info">Бейкер-стрит, 221b</p>
                     </div>
                     <div class="contact-card">
-                        <button class="contact-button">Позвоните мне</button>
+                        <button class="contact-button">Позвоните мне - 888005553535</button>
                     </div>
                 </div>
             </div>
