--- a/pages/goods.html
+++ b/pages/goods.html
@@ -22,20 +22,20 @@
                 <h1 class="page-title">Каталог товаров</h1>
                 <div class="goods-container">
                     <div class="goods-card">
-                        <img class="goods-image" src="../images/goods1.jpg" alt="Товар 1">
-                        <h3 class="goods-title">Товар 1</h3>
+                        <img class="goods-image" src="photo2.webp" alt="Товар 1">
+                        <h3 class="goods-title">ROBLOX</h3>
                         <p class="goods-price">1 990 руб.</p>
                         <button class="goods-button">Купить</button>
                     </div>
                     <div class="goods-card">
-                        <img class="goods-image" src="../images/goods2.jpg" alt="Товар 2">
-                        <h3 class="goods-title">Товар 2</h3>
+                        <img class="goods-image" src="photo3.webp" alt="Товар 2">
+                        <h3 class="goods-title">MINECRAFT</h3>
                         <p class="goods-price">2 990 руб.</p>
                         <button class="goods-button">Купить</button>
                     </div>
                     <div class="goods-card">
-                        <img class="goods-image" src="../images/goods3.jpg" alt="Товар 3">
-                        <h3 class="goods-title">Товар 3</h3>
+                        <img class="goods-image" src="photo4.webp" alt="Товар 3">
+                        <h3 class="goods-title">STANDOFF 2</h3>
                         <p class="goods-price">3 990 руб.</p>
                         <button class="goods-button">Купить</button>
                     </div>
