--- a/pages/news.html
+++ b/pages/news.html
@@ -22,19 +22,20 @@
                 <h1 class="page-title">Новости</h1>
                 <div class="news-container">
                     <div class="news-card">
-                        <h2 class="news-title">Новость 1</h2>
-                        <p class="news-meta">01.01.2025 12:00 Р.У. Астафьев</p>
-                        <p class="news-content">Текст новости 1. Бла-бла. Интересная информация о событии, которое произошло недавно.</p>
+                        <h2 class="news-title">Новость 1:</h2>
+                        <p class="news-meta">Кошка стала главой департамента в японском городе
+</p>
+                        <p class="news-content">В японском городке Тиба, в поисках оригинальности и способа привлечь внимание к местным вопросам, на пост главы департамента по связям с общественностью назначили… кошку по имени Момо! Она, конечно, не занимается административной работой, но её очаровательные фотографии и статус помогают повысить узнаваемость города и привлекать туристов. Мы все мечтаем о таком карьерном старте!</p>
                     </div>
                     <div class="news-card">
-                        <h2 class="news-title">Новость 2</h2>
-                        <p class="news-meta">02.01.2025 15:30 Р.У. Остафьев</p>
-                        <p class="news-content">Текст новости 2. Бла-бла. Подробности о важном событии в мире технологий.</p>
+                        <h2 class="news-title">Новость 2:</h2>
+                        <p class="news-meta">Собака спасла своего хозяина от ограбления, «выиграв» дуэль с грабителем</p>
+                        <p class="news-content">В Лондоне собака по кличке Макс стала настоящим героем, когда заметила грабителя, пытающегося войти в дом её хозяев. К счастью, Макс оказался не только хорошим сторожем, но и настоящим защитником! После того как они устроили импровизированный “поединок” с грабителем, тот решил отступить. Похоже, Макс теперь будет получать бонусы в виде лакомств!</p>
                     </div>
                     <div class="news-card">
-                        <h2 class="news-title">Новость 3</h2>
-                        <p class="news-meta">03.01.2025 09:15 Р.У. Естафьев</p>
-                        <p class="news-content">Текст новости 3. Бла-бла. Анализ текущих тенденций в образовании.</p>
+                        <h2 class="news-title">Новость 3:</h2>
+                        <p class="news-meta">В Индии мужчина посадил в саде целый лес и теперь помогает спасать планету</p>
+                        <p class="news-content">Интересная новость пришла из Индии: мужчина по имени Дхармеш Сингх за последние 30 лет посадил более 3 миллионов деревьев! Его действия помогли восстановить экосистему в его родном районе, и теперь он считается неофициальным героем экологии. Все хотят научиться его подходу — как за 30 лет создать «свой» лес.</p>
                     </div>
                 </div>
             </div>
