--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
                 </div> 
                  
                 <div class="skills-container"> 
-                    <div class="skill-tag">Навык 1: зарабатываю деньги</div> 
-                    <div class="skill-tag">Навык 2: жму 1кг от груди</div> 
-                    <div class="skill-tag">Навык 3: моргаю раз в час</div> 
-                    <div class="skill-tag">Навык 4: умею летать</div> 
+                    <div class="skill-tag"> зарабатываю деньги</div> 
+                    <div class="skill-tag"> жму 1кг от груди</div> 
+                    <div class="skill-tag"> моргаю раз в час</div> 
+                    <div class="skill-tag"> умею летать</div> 
                 </div> 
                  
                 <div class="experience-section"> 
                     <h2 class="section-title">Мой опыт работы</h2> 
                     <div class="experience-card"> 
-                        <h3 class="experience-title">Опыт 1:</h3> 
+                        <h3 class="experience-title">Яндекс Go:</h3> 
                         <p class="experience-desc">Работал курьером Яндекс Go.</p> 
                     </div> 
                     <div class="experience-card"> 
-                        <h3 class="experience-title">Опыт 2:</h3> 
+                        <h3 class="experience-title">МегаМаркет:</h3> 
                         <p class="experience-desc">Работал сборщиком заказов в МегаМаркете.
 </p> 
                     </div> 
                     <div class="experience-card"> 
-                        <h3 class="experience-title">Опыт 3:</h3> 
+                        <h3 class="experience-title">ДоДо:</h3> 
                         <p class="experience-desc">Работал велокурьером в ДоДо.</p> 
                     </div> 
                 </div> 
