--- a/pages/news.html
+++ b/pages/news.html
@@ -3,42 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Новости - Семестровая работа</title>
-        <link rel="stylesheet" href="../style/styles.css">
+        <title>Новости - Хамрокулов Самир</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
-            <div class="nav">
+            <header class="header">
+                <h1>Новости</h1>
+            </header>
+
+            <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
                     <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
                 </ul>
-            </div>
-            <div class="content">
-                <h1 class="page-title">Новости</h1>
-                <div class="news-container">
-                    <div class="news-card">
-                        <h2 class="news-title">Кошка стала главой департамента в японском городе</h2>
-                        <p class="news-meta">20.06.2024 Воч Дима</p>
-                        <p class="news-content">В японском городке Тиба, в поисках оригинальности и способа привлечь внимание к местным вопросам, на пост главы департамента по связям с общественностью назначили… кошку по имени Момо! Она, конечно, не занимается административной работой, но её очаровательные фотографии и статус помогают повысить узнаваемость города и привлекать туристов. Мы все мечтаем о таком карьерном старте!</p>
-                    </div>
-                    <div class="news-card">
-                        <h2 class="news-title">Собака спасла своего хозяина от ограбления, «выиграв» дуэль с грабителем</h2>
-                        <p class="news-meta">22.06.2024 Воч Дима</p>
-                        <p class="news-content">В Лондоне собака по кличке Макс стала настоящим героем, когда заметила грабителя, пытающегося войти в дом её хозяев. К счастью, Макс оказался не только хорошим сторожем, но и настоящим защитником! После того как они устроили импровизированный “поединок” с грабителем, тот решил отступить. Похоже, Макс теперь будет получать бонусы в виде лакомств!</p>
-                    </div>
-                    <div class="news-card">
-                        <h2 class="news-title">В Индии мужчина посадил в саде целый лес и теперь помогает спасать планету</h2>
-                        <p class="news-meta">24.06.2024 Воч Дима</p>
-                        <p class="news-content">Интересная новость пришла из Индии: мужчина по имени Дхармеш Сингх за последние 30 лет посадил более 3 миллионов деревьев! Его действия помогли восстановить экосистему в его родном районе, и теперь он считается неофициальным героем экологии. Все хотят научиться его подходу — как за 30 лет создать «свой» лес.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer">Футер</div>
+            </nav>
+
+            <main class="content">
+                <section class="news-container">
+                    <article class="news-card">
+                        <h2 class="news-title">Обновление портфолио</h2>
+                        <p class="news-meta">30 октября 2025</p>
+                        <p class="news-text">Добавлены новые проекты и обновлена информация о навыках. Теперь сайт использует современные технологии HTML5 и CSS Grid.</p>
+                    </article>
+
+                    <article class="news-card">
+                        <h2 class="news-title">Изучение новых технологий</h2>
+                        <p class="news-meta">25 октября 2025</p>
+                        <p class="news-text">Активно изучаю фронтенд и бэкенд разработку. Освоил основы React и Node.js.</p>
+                    </article>
+
+                    <article class="news-card">
+                        <h2 class="news-title">Участие в соревнованиях</h2>
+                        <p class="news-meta">20 октября 2025</p>
+                        <p class="news-text">Принял участие в университетском хакатоне по веб-разработке. Занял 3 место в командном зачете.</p>
+                    </article>
+                </section>
+            </main>
+
+            <footer class="footer">
+                <p>© 2025 Хамрокулов Самир Сухробович</p>
+            </footer>
         </div>
     </body>
 </html>
