--- a/pages/practices.html
+++ b/pages/practices.html
@@ -3,39 +3,66 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Практики - Семестровая работа</title>
-        <link rel="stylesheet" href="../style/styles.css">
+        <title>Практики - Хамрокулов Самир</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
-            <div class="nav">
+            <header class="header">
+                <h1>Практические работы</h1>
+            </header>
+
+            <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
                     <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
                 </ul>
-            </div>
-            <div class="content">
-                <h1 class="page-title">Практические работы</h1>
-                <div class="practices-container">
-                    <div class="practice-card">
-                        <h3 class="practice-title">Практическая работа №1</h3>
-                        <p class="practice-desc">Введение в HTML разметку</p>
+            </nav>
+
+            <main class="content">
+                <section class="practices-container">
+                    <h2 class="section-title">Выполненные практические работы</h2>
+                    
+                    <div class="experience-grid">
+                        <article class="experience-card">
+                            <h3 class="experience-title">Практика 9: Семантические теги</h3>
+                            <p class="experience-desc">Изучение HTML5 семантических тегов, CSS Grid и Flexbox. Создание адаптивного макета страницы.</p>
+                        </article>
+
+                        <article class="experience-card">
+                            <h3 class="experience-title">Практика 10: Модальные окна</h3>
+                            <p class="experience-desc">Реализация модальных окон с использованием HTML5 dialog элемента и JavaScript для обработки форм.</p>
+                        </article>
+
+                        <article class="experience-card">
+                            <h3 class="experience-title">Python GUI приложение</h3>
+                            <p class="experience-desc">Разработка настольного приложения на Python с использованием PySide6 и интеграцией с PostgreSQL.</p>
+                        </article>
+
+                        <article class="experience-card">
+                            <h3 class="experience-title">C++ проекты</h3>
+                            <p class="experience-desc">Создание консольных приложений на C++ для обработки текстовых файлов и подсчета статистики.</p>
+                        </article>
+
+                        <article class="experience-card">
+                            <h3 class="experience-title">Лингвистическая презентация</h3>
+                            <p class="experience-desc">Подготовка интерактивной презентации о фемининативах в русском языке с элементами геймификации.</p>
+                        </article>
+
+                        <article class="experience-card">
+                            <h3 class="experience-title">Работа с Git</h3>
+                            <p class="experience-desc">Освоение системы контроля версий Git, работа с GitHub, развертывание проектов через GitHub Pages.</p>
+                        </article>
                     </div>
-                    <div class="practice-card">
-                        <h3 class="practice-title">Практическая работа №2</h3>
-                        <p class="practice-desc">Основы CSS стилизации</p>
-                    </div>
-                    <div class="practice-card">
-                        <h3 class="practice-title">Практическая работа №3</h3>
-                        <p class="practice-desc">Адаптивная верстка</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer">Футер</div>
+                </section>
+            </main>
+
+            <footer class="footer">
+                <p>© 2025 Хамрокулов Самир Сухробович</p>
+            </footer>
         </div>
     </body>
 </html>
