--- a/pages/goods.html
+++ b/pages/goods.html
@@ -3,45 +3,72 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Товары - Семестровая работа</title>
-        <link rel="stylesheet" href="../style/styles.css">
+        <title>Товары - Хамрокулов Самир</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
-            <div class="nav">
+            <header class="header">
+                <h1>Товары и услуги</h1>
+            </header>
+
+            <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
                     <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
                 </ul>
-            </div>
-            <div class="content">
-                <h1 class="page-title">Каталог товаров</h1>
-                <div class="goods-container">
-                    <div class="goods-card">
-                        <img class="goods-image" src="photo2.webp" alt="Товар 1">
-                        <h3 class="goods-title">ROBLOX</h3>
-                        <p class="goods-price">1 990 руб.</p>
-                        <button class="goods-button">Купить</button>
+            </nav>
+
+            <main class="content">
+                <section class="products-container">
+                    <h2 class="section-title">Мои услуги</h2>
+                    
+                    <div class="products-grid">
+                        <article class="product-card">
+                            <h3 class="product-name">Разработка веб-сайтов</h3>
+                            <p class="product-price">от 15 000 ₽</p>
+                            <p>Создание современных адаптивных веб-сайтов с использованием HTML5, CSS3 и JavaScript.</p>
+                        </article>
+
+                        <article class="product-card">
+                            <h3 class="product-name">Python приложения</h3>
+                            <p class="product-price">от 10 000 ₽</p>
+                            <p>Разработка настольных приложений на Python с графическим интерфейсом.</p>
+                        </article>
+
+                        <article class="product-card">
+                            <h3 class="product-name">База данных</h3>
+                            <p class="product-price">от 8 000 ₽</p>
+                            <p>Проектирование и настройка баз данных PostgreSQL, интеграция с приложениями.</p>
+                        </article>
+
+                        <article class="product-card">
+                            <h3 class="product-name">Консультации</h3>
+                            <p class="product-price">2 000 ₽/час</p>
+                            <p>Техническое консультирование по вопросам веб-разработки и программирования.</p>
+                        </article>
+
+                        <article class="product-card">
+                            <h3 class="product-name">Курьерские услуги</h3>
+                            <p class="product-price">от 300 ₽</p>
+                            <p>Доставка документов и небольших грузов по городу. Опыт работы в Яндекс Go и ДоДо.</p>
+                        </article>
+
+                        <article class="product-card">
+                            <h3 class="product-name">Сборка заказов</h3>
+                            <p class="product-price">от 1 500 ₽/день</p>
+                            <p>Услуги по сборке и упаковке товаров. Опыт работы в МегаМаркете.</p>
+                        </article>
                     </div>
-                    <div class="goods-card">
-                        <img class="goods-image" src="photo3.webp" alt="Товар 2">
-                        <h3 class="goods-title">MINECRAFT</h3>
-                        <p class="goods-price">2 990 руб.</p>
-                        <button class="goods-button">Купить</button>
-                    </div>
-                    <div class="goods-card">
-                        <img class="goods-image" src="photo4.webp" alt="Товар 3">
-                        <h3 class="goods-title">STANDOFF 2</h3>
-                        <p class="goods-price">3 990 руб.</p>
-                        <button class="goods-button">Купить</button>
-                    </div>
-                </div>
-            </div>
-            <div class="footer">Футер</div>
+                </section>
+            </main>
+
+            <footer class="footer">
+                <p>© 2025 Хамрокулов Самир Сухробович</p>
+            </footer>
         </div>
     </body>
 </html>
