--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="page-container">
             <header class="header">
-                <h1>Мой сайт-портфолио</h1>
+                <h1>Мой сайт</h1>
             </header>
 
             <nav class="nav">
@@ -24,8 +24,8 @@
 
             <main class="content">
                 <article class="profile-header">
-                    <h1 class="profile-title">Информация об авторе</h1>
-                    <h2 class="profile-name">Хамрокулов Самир Сухробович</h2>
+                    <h2 class="profile-title">Информация об авторе</h2>
+                    <h3 class="profile-name">Хамрокулов Самир Сухробович</h3>
                     <p class="profile-group">ЭФБО-12-24</p>
                 </article>
 
@@ -70,7 +70,7 @@
             </main>
 
             <footer class="footer">
-                <p>© 2025 Хамрокулов Самир Сухробович</p>
+                <p> Хамрокулов Самир Сухробович</p>
             </footer>
         </div>
     </body>
