--- a/pages/news.html
+++ b/pages/news.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Новости - Хамрокулов Самир</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="page-container">
-            <header class="header">
-                <h1>Новости</h1>
-            </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Новости - Хамрокулов Самир</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="page-container">
+        <header class="header">
+            <h1>Новости</h1>
+        </header>
 
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-                </ul>
-            </nav>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
 
-            <main class="content">
-                <section class="news-container">
-                    <article class="news-card">
-                        <h2 class="news-title">Обновление портфолио</h2>
-                        <p class="news-meta">30 октября 2025</p>
-                        <p class="news-text">Добавлены новые проекты и обновлена информация о навыках. Теперь сайт использует современные технологии HTML5 и CSS Grid.</p>
-                    </article>
+        <main class="content">
+            <section class="news-container">
+                <article class="news-card">
+                    <h2 class="news-title">Обновление портфолио</h2>
+                    <p class="news-meta">30 октября 2025</p>
+                    <p class="news-text">Добавлены новые проекты и обновлена информация о навыках. Теперь сайт использует современные технологии HTML5 и CSS Grid.</p>
+                </article>
 
-                    <article class="news-card">
-                        <h2 class="news-title">Изучение новых технологий</h2>
-                        <p class="news-meta">25 октября 2025</p>
-                        <p class="news-text">Активно изучаю фронтенд и бэкенд разработку. Освоил основы React и Node.js.</p>
-                    </article>
+                <article class="news-card">
+                    <h2 class="news-title">Изучение новых технологий</h2>
+                    <p class="news-meta">25 октября 2025</p>
+                    <p class="news-text">Активно изучаю фронтенд и бэкенд разработку. Освоил основы React и Node.js.</p>
+                </article>
 
-                    <article class="news-card">
-                        <h2 class="news-title">Участие в соревнованиях</h2>
-                        <p class="news-meta">20 октября 2025</p>
-                        <p class="news-text">Принял участие в университетском хакатоне по веб-разработке. Занял 3 место в командном зачете.</p>
-                    </article>
-                </section>
-            </main>
+                <article class="news-card">
+                    <h2 class="news-title">Участие в соревнованиях</h2>
+                    <p class="news-meta">20 октября 2025</p>
+                    <p class="news-text">Принял участие в университетском хакатоне по веб-разработке. Занял 3 место в командном зачете.</p>
+                </article>
+            </section>
+        </main>
 
-            <footer class="footer">
-                <p>© 2025 Хамрокулов Самир Сухробович</p>
-            </footer>
-        </div>
-    </body>
+        <footer class="footer">
+            <p> Хамрокулов Самир Сухробович</p>
+        </footer>
+    </div>
+</body>
 </html>
