--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Практики - Хамрокулов Самир</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="page-container">
-            <header class="header">
-                <h1>Практические работы</h1>
-            </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Практики - Хамрокулов Самир</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="page-container">
+        <header class="header">
+            <h1>Практические работы</h1>
+        </header>
 
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-                </ul>
-            </nav>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
 
-            <main class="content">
-                <section class="practices-container">
-                    <h2 class="section-title">Выполненные практические работы</h2>
-                    
-                    <div class="experience-grid">
-                        <article class="experience-card">
-                            <h3 class="experience-title">Практика 9: Семантические теги</h3>
-                            <p class="experience-desc">Изучение HTML5 семантических тегов, CSS Grid и Flexbox. Создание адаптивного макета страницы.</p>
-                        </article>
+        <main class="content">
+            <section class="practices-container">
+                <h2 class="section-title">Выполненные практические работы</h2>
+                
+                <div class="experience-grid">
+                    <article class="experience-card">
+                        <h3 class="experience-title">Практика 7: HTML Основы</h3>
+                        <p class="experience-desc">Создание базовой HTML структуры сайта с навигацией, информацией об авторе и основными страницами.</p>
+                    </article>
 
-                        <article class="experience-card">
-                            <h3 class="experience-title">Практика 10: Модальные окна</h3>
-                            <p class="experience-desc">Реализация модальных окон с использованием HTML5 dialog элемента и JavaScript для обработки форм.</p>
-                        </article>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Практика 8: CSS Стилизация</h3>
+                        <p class="experience-desc">Подключение CSS файлов и создание современного дизайна с использованием градиентов и анимаций.</p>
+                    </article>
 
-                        <article class="experience-card">
-                            <h3 class="experience-title">Python GUI приложение</h3>
-                            <p class="experience-desc">Разработка настольного приложения на Python с использованием PySide6 и интеграцией с PostgreSQL.</p>
-                        </article>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Практика 9: Семантические теги</h3>
+                        <p class="experience-desc">Изучение HTML5 семантических тегов, CSS Grid и Flexbox. Создание адаптивного макета страницы.</p>
+                    </article>
 
-                        <article class="experience-card">
-                            <h3 class="experience-title">C++ проекты</h3>
-                            <p class="experience-desc">Создание консольных приложений на C++ для обработки текстовых файлов и подсчета статистики.</p>
-                        </article>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Практика 10: Модальные окна</h3>
+                        <p class="experience-desc">Реализация модальных окон с использованием HTML5 dialog элемента и JavaScript для обработки форм.</p>
+                    </article>
 
-                        <article class="experience-card">
-                            <h3 class="experience-title">Лингвистическая презентация</h3>
-                            <p class="experience-desc">Подготовка интерактивной презентации о фемининативах в русском языке с элементами геймификации.</p>
-                        </article>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Python GUI приложение</h3>
+                        <p class="experience-desc">Разработка настольного приложения на Python с использованием PySide6 и интеграцией с PostgreSQL.</p>
+                    </article>
 
-                        <article class="experience-card">
-                            <h3 class="experience-title">Работа с Git</h3>
-                            <p class="experience-desc">Освоение системы контроля версий Git, работа с GitHub, развертывание проектов через GitHub Pages.</p>
-                        </article>
-                    </div>
-                </section>
-            </main>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Работа с Git</h3>
+                        <p class="experience-desc">Освоение системы контроля версий Git, работа с GitHub, развертывание проектов через GitHub Pages.</p>
+                    </article>
+                </div>
+            </section>
+        </main>
 
-            <footer class="footer">
-                <p>© 2025 Хамрокулов Самир Сухробович</p>
-            </footer>
-        </div>
-    </body>
+        <footer class="footer">
+            <p> Хамрокулов Самир Сухробович</p>
+        </footer>
+    </div>
+</body>
 </html>
